# terra-source-only-fnd

./: .gitignore  README.md  pyproject.toml
data/summary/: release_manifest.json  released_file_manifest.csv  representative_baselines.csv
data/terra_score_inputs/seed20260424/: target_coaid.csv  target_liar.csv  target_pmd.csv  target_politifact.csv
data/terra_score_inputs/seed20260425/: target_coaid.csv  target_liar.csv  target_pmd.csv  target_politifact.csv
data/terra_score_inputs/seed20260426/: target_coaid.csv  target_liar.csv  target_pmd.csv  target_politifact.csv
docs/: DATA.md  LLM_PROCESSING.md  MODEL_DETAILS.md  REPRODUCIBILITY.md  UPLOAD_PLAN.md
scripts/: make_main_table.py  reproduce_terra.py  verify_package.py
src/terra/: __init__.py  metrics.py  model.py
