[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terra-source-only-fnd"
version = "0.1.0"
description = "Minimal reproducibility package for TERRA source-only unknown-domain fake news detection."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
